# Batoncadence

./: .dockerignore  .gitattributes  .gitignore  2026-06-11-222729-this-session-is-being-continued-from-a-previous-c.txt  CHANGELOG.md  Dockerfile  LICENSE  LICENSE-ENTERPRISE.txt  QUICKSTART.md  README.md  SECURITY.md  Start BatonCadence.bat  TRADEMARKS.md  docker-compose.yml  install.bat  main.py  mco.bat  pyproject.toml  quickstart.py
.claude/: launch.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
configs/: README.md  SCHEDULER_PROMPT.md
configs/antigravity/: mcp_config.json
configs/claude/: .mcp.json
configs/codex/: config.toml
configs/workflows/: example_release.yaml  qa_loop.yaml  saas_hardening.yaml
docs/: AIRGAP.md  DEMO.md  DEPLOYMENT.md  DRUMLINE.md  ENTERPRISE.md  GOVERNANCE.md  INSTALL.md  INTEGRATIONS.md  MYTHOS.md  ROADMAP.md  SDK.md  SETUP.md  SETUP_GUIDE.md  SMOKE_TEST.md  VALIDATION_SUMMARY.md  WALKTHROUGH.md
docs/migrations/: 2026-06_multi_tenancy.sql  2026-06_mythos_shared_context.sql  2026-06_phase_a_governance.sql  2026-06_tamper_evident_audit.sql
plans/: GOAL-one-click-install.md  GOAL-original-drumline.md  GOAL-original-mythos.md  LAUNCH_PLAN.md  REVENUE_PLAN.md
scripts/: build_console.py  install.ps1  install.sh  make-offline-bundle.ps1  make-offline-bundle.sh  mco.ps1  mco.sh  setup.ps1  smoke_crossvendor.py
src/mco/: __init__.py  cli.py  config.py  console.py  dashboard.py  editions.py  fleet.py  localstore.py  logging_setup.py  mcp_server.py  migrations_runner.py  ratelimit.py  sdk.py  security.py  service.py  setup_wizard.py  waker.py
src/mco/connectors/: __init__.py  base.py  dynatrace.py  servicenow.py  sync.py
src/mco/console_src/: 2ed3f6b1-e1c6-43fc-8b29-31917195cbd5.js  32c20ad6-cc53-43b3-a432-3a75e249b495.js  43b328d0-9d0e-4fce-a105-be0a939d7e48.js  47e66145-9c4d-41a1-acbb-42b12848f160.js  5adac14f-6645-4e02-866b-22c4e571989b.js  8ec84a72-7b37-434d-a68b-2ac1188e3e6d.js  bb158701-74ed-4f8d-8363-e8eb7edb6768.js  e63b9c8d-2594-472b-aed9-92e2be49df5d.js  index.json
src/mco/migrations/: 2026-06_drumline_shared_context.sql  2026-06_llm_connections.sql  2026-06_scoped_tokens.sql  2026-07_drumline_dedup.sql
src/mco/notifiers/: ntfy.py
src/mco/orchestrator/: __init__.py  admin_routes.py  audit.py  auth.py  client.py  context_routes.py  contracts.py  drumline.py  executors.py  handlers.py  integration_routes.py  listener.py  llm_connections.py  metrics_routes.py  mythos.py  routes.py  utils.py  workflows.py
src/mco/static/: console.html
tests/: __init__.py  conftest.py  test_admin_routes.py  test_agent_auth.py  test_audit.py  test_auth.py  test_cli_status.py  test_client.py  test_client_negative.py  test_config.py  test_connectors.py  test_console.py  test_dashboard.py  test_drumline.py  test_encryption.py  test_executor_edge.py  test_executors.py  test_fleet.py  test_governance.py  test_integration_routes.py  test_job_board.py  test_lease_reaper.py  test_listener.py  test_llm_connections.py  test_localstore.py  test_mcp_server.py  test_metrics.py  test_migrations_runner.py  test_mythos.py  test_ratelimit.py  test_rbac.py  test_robustness_fixes.py  test_routes.py  test_sdk.py  test_security_hardening.py  test_service.py  test_service_cli.py  test_status_routes.py  test_tamper_evident_audit.py  test_tenancy.py  (+3 more)
website/: README.md  index.html  install.ps1  install.sh
