[project]
name = "batoncadence"
version = "0.2.0"
description = "BatonCadence: a governed job board for AI agents - approval gates, immutable audit, and Drumline shared memory. Every agent. One baton."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Joe Arroyo", email = "joe.arroyo@gmail.com" }
]
keywords = ["ai-agents", "orchestration", "mcp", "governance", "self-hosted", "audit", "human-in-the-loop"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "supabase>=1.0.0",
    "httpx>=0.24.0",
    "cryptography>=41.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "websockets>=11.0",
    "mcp>=1.2.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://batoncadence.com"
Repository = "https://github.com/mastalink/Batoncadence"
Documentation = "https://github.com/mastalink/Batoncadence/tree/main/docs"
Changelog = "https://github.com/mastalink/Batoncadence/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mco = "mco.cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mco = ["static/*.html"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
